--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h1 id="dynamic-title">Acceso Restringido</h1>
             
             <p class="main-msg">
-                AdGuard Home ha interceptado esta conexión.
+                AdGuard Home ha bloqueado esta conexión.
             </p>
 
             <div class="details-box">
