--- a/telmex.html
+++ b/telmex.html
@@ -239,7 +239,7 @@
             detailsElement.innerHTML = `
                 <div class="detail-row">
                     <span class="detail-label">⚠️ Estado</span>
-                    <span class="status-badge">RESTRINGIDO</span>
+                    <span class="status-badge">Aceptado</span>
                 </div>
                 <div class="detail-row">
                     <span class="detail-label">📅 Fecha</span>
@@ -252,6 +252,10 @@
                 <div class="detail-row">
                     <span class="detail-label">🔒 Protocolo</span>
                     <span class="detail-value">${protocol}</span>
+                </div>
+                <div class="detail-row">
+                    <span class="detail-label">🛜 Latencia</span>
+                    <span class="detail-value">Baja (100000 ms) </span>
                 </div>
             `;
         }
