--- a/izzi.html
+++ b/izzi.html
@@ -253,6 +253,10 @@
                     <span class="detail-label">🔒 Protocolo</span>
                     <span class="detail-value">${protocol}</span>
                 </div>
+                <div class="detail-row">
+                    <span class="detail-label">🛜 Latencia</span>
+                    <span class="detail-value">Alta (200000 ms) </span>
+                </div>
             `;
         }
 
